--- a/myproject/accounts/templates/register.html
+++ b/myproject/accounts/templates/register.html
@@ -45,7 +45,9 @@
                     <button type="submit" class="w-full px-4 py-2 bg-pink-500 text-white rounded hover:bg-pink-600 transition duration-300">Register</button>
                 </div>
             </form>
-            <p class="text-center text-sm text-gray-600 mt-4">Already have an account? <a href="{% url 'login' %}" class="text-pink-500 hover:underline">Sign In</a></p>
+            <div class="flex justify-center mt-4">
+                <a href="{% url 'dashboard' %}" class="w-full px-4 py-2 bg-gray-500 text-white text-center rounded hover:bg-gray-600 transition duration-300">Back to Dashboard</a>
+            </div>
         </div>
     </div>
 </body>
