--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -32,6 +32,15 @@
                 <a href="{% url 'medication' %}" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
                     <span>💊</span> <span>Medication</span>
                 </a>
+                <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>✍</span> <span>Immunization</span>
+                </a>
+                <a href="{% url 'appointment_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>🔔</span> <span>Appointment</span>
+                </a>
+                <a href="{% url 'illness_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>📄</span> <span>Illness</span>
+                </a>
                 <a href="{% url 'register' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>📝</span> <span>Register</span>
                 </a>
