--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -27,22 +27,22 @@
             </div>
             <nav class="flex flex-col space-y-4 px-6">
                 <a href="{% url 'childrecord' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>🏠</span> <span>Dashboard</span>
+                    <span>🏠</span> <span>Child Records</span>
                 </a>
                 <a href="{% url 'medication' %}" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
-                    <span>💊</span> <span>Medication</span>
-                </a>
-                <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>✍</span> <span>Immunization</span>
-                </a>
-                <a href="{% url 'appointment_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>🔔</span> <span>Appointment</span>
+                    <span>💊</span> <span>Medication List</span>
                 </a>
                 <a href="{% url 'illness_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>📄</span> <span>Illness</span>
+                    <span>📄</span> <span>Illness List</span>
+                </a>
+                <a href="{% url 'appointment_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>🔔</span> <span>Appointment List</span>
+                </a>
+                <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>✍</span> <span>Immunizations List</span>
                 </a>
                 <a href="{% url 'register' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>📝</span> <span>Register</span>
+                    <span>⚙️</span> <span>User Settings</span>
                 </a>
                 <form method="post" action="{% url 'logout' %}">
                     {% csrf_token %}
