--- a/myproject/accounts/templates/medication.html
+++ b/myproject/accounts/templates/medication.html
@@ -34,7 +34,7 @@
                     <span>🏠</span> <span>Home</span>
                 </a>
                 <a href="{% url 'medic' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>💊</span> <span>Medical</span>
+                    <span>💊</span> <span>Medication List of Children</span>
                 </a>
                 <a href="{% url 'growth_data' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>⭐</span> <span>Growth Data</span>
