--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -24,8 +24,14 @@
                 <tr class="bg-pink-500 text-white">
                     <th class="p-3 border border-gray-300">ID</th>
                     <th class="p-3 border border-gray-300">First Name</th>
+                    <th class="p-3 border border-gray-300">Middle Name</th>
                     <th class="p-3 border border-gray-300">Last Name</th>
                     <th class="p-3 border border-gray-300">Category</th>
+                    <th class="p-3 border border-gray-300">Gender</th>
+                    <th class="p-3 border border-gray-300">Date of Birth</th>
+                    <th class="p-3 border border-gray-300">Current Age</th>
+                    <th class="p-3 border border-gray-300">Date of Admission</th>
+                    <th class="p-3 border border-gray-300">Age of Admission</th>
                     <th class="p-3 border border-gray-300">Actions</th>
                 </tr>
             </thead>
@@ -33,8 +39,14 @@
                 <tr class="bg-gray-100 text-center">
                     <td class="p-3 border border-gray-300">001</td>
                     <td class="p-3 border border-gray-300">John</td>
+                    <td class="p-3 border border-gray-300">Dih</td>
                     <td class="p-3 border border-gray-300">Doe</td>
                     <td class="p-3 border border-gray-300">Pre-School</td>
+                    <td class="p-3 border border-gray-300">Male</td>
+                    <td class="p-3 border border-gray-300">25/01/2005</td>
+                    <td class="p-3 border border-gray-300">18</td>
+                    <td class="p-3 border border-gray-300">25/03/2025</td>
+                    <td class="p-3 border border-gray-300">4 days</td>
                     <td class="p-3 border border-gray-300 flex justify-center gap-2">
                         <button class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600 edit-btn">Edit</button>
                         <button class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 remove-btn">Remove</button>
@@ -124,6 +136,5 @@
             window.location.href = "{% url 'registerchild' %}";
         });
     </script>
-
 </body>
 </html>
