--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -47,7 +47,8 @@
                     <td class="p-3 border border-gray-300">5</td>
                     <td class="p-3 border border-gray-300 flex justify-center gap-2">
                         <button class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600 edit-btn">Edit</button>
-                        <button class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600 edit-btn">View</button>
+                        <button onclick="window.location.href='{% url 'growth_data' %}'" 
+                                class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600">View</button>
                         <button class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 remove-btn">Remove</button>
                     </td>
                 </tr>
