--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -62,8 +62,10 @@
                     <td class="p-3 border border-gray-300">{{ child.age_of_admission }}</td>
                     <td class="p-3 border border-gray-300 flex justify-center gap-2">
                         <button class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600 edit-btn">Edit</button>
-                        <button onclick="window.location.href=''" 
-                                class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600">View</button>
+                        <button onclick="window.location.href='{% url 'growth_data' child.id %}'" 
+                                class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600">
+                            View
+                        </button>
                         <button class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 remove-btn">Remove</button>
                     </td>
                 </tr>
