--- a/myproject/accounts/templates/dental_record.html
+++ b/myproject/accounts/templates/dental_record.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dental Record</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    {% load static %}
 </head>
 <body class="bg-gray-100 flex justify-center items-start min-h-screen p-0">
     <div class="w-full h-screen bg-white p-8 rounded-lg shadow-lg">
         <div class="text-center">
-            <img src="logo.jpg" alt="Gentle Hands Logo" class="mx-auto h-16">
+            <img src="{% static 'logo.jpg' %}" alt="Gentle Hands Logo" class="mx-auto h-16">
             <h2 class="text-2xl font-bold text-gray-800">DENTAL RECORD FOR: <span class="text-pink-500">JUAN BATUMBAKAL JR.</span></h2>
             <h3 class="text-lg">AS AT: <span id="currentDate">03/29/25</span></h3>
         </div>
