--- a/myproject/accounts/templates/dental_record.html
+++ b/myproject/accounts/templates/dental_record.html
@@ -11,8 +11,7 @@
     <div class="w-full h-screen bg-white p-8 rounded-lg shadow-lg">
         <div class="text-center">
             <img src="{% static 'logo.jpg' %}" alt="Gentle Hands Logo" class="mx-auto h-16">
-            <h2 class="text-2xl font-bold text-gray-800">DENTAL RECORD FOR: <span class="text-pink-500">JUAN BATUMBAKAL JR.</span></h2>
-            <h3 class="text-lg">AS AT: <span id="currentDate">03/29/25</span></h3>
+            <h2 class="text-2xl font-bold text-gray-800 text-3xl">DENTAL RECORD</h2>
         </div>
 
         <div class="flex justify-end mt-4">
